# note-bot

./: .dockerignore  .sample.env  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 3ad5e80c058a_initial_tables.py  3ccdd03aa300_add_updated_at_ro_note.py  47f01a37263a_alter_user_id.py  6fb06b1f6591_alter_updated_at_ro_note.py  b5dfc3b07114_initial.py  ea4b0c3492c4_add_notes.py  f9068404ee2e_add_created_at_to_note.py
src/: __init__.py  config.py  main.py  notes.py
src/admin/: states.py
src/admin/keyboards/: reply.py
src/admin/routers/: __init__.py  base.py  note_bot.py  notification_service.py  pomodoro.py
src/core/: db.py  filters.py  keyboards.py  routers.py
src/db/: base.py  models.py  repository.py  schemas.py
src/keyboards/: __init__.py  notes.py
src/keyboards/inline/: __init__.py  notes.py
src/keyboards/inline/notes/: all.py  (+2 more)
src/keyboards/reply/: __init__.py  admin.py  base.py  notes.py
src/notes/: models.py  repository.py  service.py
src/notes/callbacks/: all.py  base.py  one_note.py
src/notes/keyboards/: reply.py
src/notes/routers/: add.py  base.py  delete.py  get.py  rename.py  update.py
src/routers/: __init__.py  base.py  notes.py
src/routers/admin/: __init__.py  base.py  note_bot.py  notification_service.py  pomodoro.py
src/routers/callback/: __init__.py  notes.py
src/routers/callbacks/: __init__.py
src/routers/notes/: __init__.py  add.py  base.py  delete.py  get.py  rename.py  update.py
src/service/: __init__.py  filters.py  notes.py
src/states/: __init__.py  notes.py
(+6 files in other folders)
