[project]
name = "note-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 100
